# markvegas

./: .env.example  .gitignore  Mark Vegas Design System.html  README.md  SECRET  admin.html  admin.js  index.html  package-lock.json  package.json  script.js  style.css  vercel.json
.claude-plugin/: plugin.json
api/: _auth.js  portfolio.js  profile.js  upload.js
api/media/: [id].js
api/portfolio/: [id].js
hooks/: hooks.json  run-hook.sh
mcpb-2.1.2 2/: CLI.md  CONTRIBUTING.md  MANIFEST.md  jest.config.js  tsconfig.json  tsconfig.test.json
mcpb-2.1.2 2/examples/: README.md
mcpb-2.1.2 2/examples/chrome-applescript/: manifest.json
mcpb-2.1.2 2/examples/file-manager-python/: manifest.json  pyproject.toml  requirements.txt
mcpb-2.1.2 2/examples/file-manager-python/server/: main.py
mcpb-2.1.2 2/examples/file-system-node/: manifest.json  package.json
mcpb-2.1.2 2/examples/hello-world-node/: manifest.json  package.json
mcpb-2.1.2 2/examples/hello-world-uv/: README.md  manifest.json  pyproject.toml
mcpb-2.1.2 2/scripts/: build-mcpb-schema.js  create-dev-version.js
mcpb-2.1.2 2/src/: cli.ts  node.ts  types.ts
mcpb-2.1.2 2/src/cli/: cli.ts  init.ts  pack.ts  unpack.ts
mcpb-2.1.2 2/src/node/: files.ts  sign.ts  validate.ts
mcpb-2.1.2 2/src/schemas/: 0.1.ts  0.2.ts  0.3.ts  0.4.ts  any.ts  index.ts
mcpb-2.1.2 2/test/: cli.test.ts  config.test.ts  icon-validation.test.ts  init.test.ts  invalid-manifest.json  mcpbignore.test.ts  schemas.test.ts  sign.e2e.test.ts  valid-manifest-0.2.json  valid-manifest.json
scripts/: setup-vercel.sh
(+13 files in other folders)
